# qatrackplus

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Changes.md  LICENSE  Makefile  Progress-Scratch.md  README.md  ation  issues.txt  local_site_code_sample.py  pyproject.toml  pytest.ini  qatrackplus31  requirements.txt  sci-update-2024-02-19.txt  setup.cfg  setup.py  uv-setup  uv-setup.md
.ai/: README.md
.ai/chat/: 2026-04-20_assistant_responses.md
.ai/github/: ai_pending_artifacts_branch_split_proposal.md  assigned_issues.md  issue_713_detailed_analysis.md  project6_backlog_drafts_added.md
.ai/plans/: django52_migration_plan.md
.ai/reviews/: dev_branch_django_convention_concrete_backlog.md  dev_branch_django_convention_top10_plan.md  documentation_audit.md  test_suite_remediation_plan.md
.github/workflows/: ci.yml  qodana_code_quality.yml
deploy/apache/: apache24_linux.conf  apache24_windows.conf
deploy/dev/: local_settings.dev.py  local_test_settings.dev.py
deploy/docker/: .env  .env.example  README.md  compose.override.yaml  compose.yaml  docker_initialisation.py  docker_settings.py  docker_utilities.py
deploy/docker/backup/: Dockerfile  backup.sh
deploy/docker/django/: Dockerfile  entrypoint.sh
deploy/docker/nginx/: Dockerfile  nginx.conf
deploy/supervisor/: django-q.conf
deploy/win/: QATrack31CherryPyService.py
docs/: conf.py  index.rst  release_notes.rst
docs/admin/: adding_custom_fields.rst  guide.rst  migration_django_admin_views.md
docs/developer/: django42_migration_plan.md  guide.rst  schema.rst
docs/install/: authentication_backends.rst  config.rst  copy_refs_tols_fix.md  copy_refs_tols_fix.rst  def-save_model-fix.rst  django4. 2-updrade.rst  django_3_2_upgrade.rst  django_admin_views_migration.rst  docker.rst  history_display_fix.rst  install.rst  linux.rst  linux_upgrade_from_030.rst  local_site_code_custom_functions.rst  pytz_to_zoneinfo_migration.rst  remove-form-utils.rst  sca_logo.rst  site_palette.rst  win.rst  win_upgrade_from_030.rst
docs/tutorials/: index.rst
docs/tutorials/internationalization/: add_language.rst  configure_language.rst  index.rst
fixtures/defaults/units/: 01-vendors.json  02-modalities.json  03-unitclass.json  04-unittypes.json
qatrack/: context_processors.py  docker_run_settings.py  docker_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
qatrack/accel_migration_tool/: accel_migration_settings.py
qatrack/accounts/: admin.py  backends.py  models.py  urls.py  views.py
qatrack/accounts/migrations/: 0004_Auto_BigAuto_TimeZone_Django42.py
qatrack/accounts/tests/: test_accounts.py
qatrack/admin_views/: __init__.py  tests.py
qatrack/api/: schemas.py  serializers.py  urls.py  viewsets.py
qatrack/api/attachments/: filters.py  urls.py
qatrack/api/auth/: filters.py  urls.py  views.py
qatrack/api/comments/: serializers.py  urls.py  views.py
qatrack/api/contenttypes/: urls.py  views.py
qatrack/api/faults/: urls.py
qatrack/api/parts/: urls.py
qatrack/api/qa/: serializers.py  urls.py  views.py
qatrack/api/service_log/: filters.py  urls.py  views.py
qatrack/api/units/: urls.py
qatrack/attachments/: admin.py  apps.py  models.py  utils.py
qatrack/attachments/migrations/: 0009_Auto_BigAuto_TimeZone_Django42.py
qatrack/attachments/tests/: conftest.py  test_models.py  test_utils.py
qatrack/contacts/: apps.py  models.py
qatrack/contacts/migrations/: 0002_Auto_BigAuto_TimeZone_Django42.py
qatrack/faults/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
qatrack/faults/migrations/: 0014_Auto_BigAuto_TimeZone_Django42.py
qatrack/faults/tests/: tests.py  utils.py
qatrack/form_utils/: admin.py  fields.py  forms.py  settings.py  utils.py  widgets.py
qatrack/form_utils/templatetags/: form_utils.py
qatrack/genericdropdown/: urls.py  views.py
qatrack/issue_tracker/: apps.py  forms.py  models.py  urls.py  views.py
qatrack/issue_tracker/migrations/: 0016_Auto_BigAuto_TimeZone_Django42.py
qatrack/issue_tracker/tests/: test_models.py  test_views.py
qatrack/middleware/: profiler.py
qatrack/middleware/tests/: test_login_required.py  test_maintain_filters.py  test_profiler_helpers.py
qatrack/notifications/: apps.py
qatrack/notifications/admin/: __init__.py
qatrack/notifications/common/: admin.py  models.py
qatrack/notifications/faults/: admin.py  handlers.py  models.py  test_fault_notices.py
qatrack/notifications/faults_review/: admin.py  models.py  tasks.py  test_faults_review.py
qatrack/notifications/migrations/: 0025_Auto_BigAuto_TimeZone_Django42.py
qatrack/notifications/models/: __init__.py
qatrack/notifications/parts/: handlers.py  models.py
qatrack/notifications/qccompleted/: admin.py  conftest.py  handlers.py  models.py  test_qcc.py
qatrack/notifications/qcreview/: admin.py  models.py  tasks.py  test_qcr.py
qatrack/notifications/qcscheduling/: admin.py  models.py  tasks.py  test_qcs.py
qatrack/notifications/service_log/: handlers.py  models.py
qatrack/notifications/service_log_review/: admin.py  models.py  tasks.py  test_ser.py
qatrack/notifications/service_log_scheduling/: admin.py  conftest.py  models.py  tasks.py  test_sls.py
qatrack/parts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
qatrack/qa/: admin.py  apps.py  local_site_code.py  models.py  signals.py  testpack.py  trees.py  urls.py  utils.py
qatrack/qatrack_core/: admin.py  dates.py  email.py  forms.py  mixins.py  scheduling.py  serializers.py  tasks.py  urls.py  utils.py  views.py  widgets.py
qatrack/reports/: admin.py  apps.py  filters.py  forms.py  models.py  reports.py  tasks.py  views.py
qatrack/service_log/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
qatrack/templates/: site_base.html
qatrack/units/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
requirements/: 399.txt  base.txt  dev.txt
scripts/: create_dqa3_testlist.py  create_grouped_dqa3_testlist.py  extract_translation_tags.py  translation.py  unified_translation_manager.py
(+92 files in other folders)
