[project]
name = "qatrackplus"
version = "4.0.0"
description = "Quality Assurance software for medical physicists"
requires-python = ">=3.12, <=3.13"
authors = [
    {name = "Randy Taylor", email = "randy@multileaf.ca"},
]
package-mode = false

dependencies = [
    "Django==4.2",
    "django-q2>=1.8.0",
    "beautifulsoup4==4.9.3",
    "concurrent-log-handler==0.9.19",
    "coreapi>=2.3.3,<3.0",
    "django-auth-adfs>=1.7.0",
    "django-braces>=1.17,<1.18",
    "django-contrib-comments>=2.2,<3.0",
    "django-crispy-forms>=1.14.0,<2.0",
    "django-dynamic-raw-id>=4.0",
    "django-filter>=23.0",
    "django-formtools>=2.5.1,<3.0",
    "django-listable>=0.9.0,<1.0",
    "django-mptt>=0.13.4,<1.0",
    "django-mptt-admin>=2.0",
    "django-picklefield>=3.1",
    "django-registration>=3.2",
    "djangorestframework>=3.14.0",
    "djangorestframework-filters>=1.0.0.dev2",
    "django-widget-tweaks>=1.5.0",
    "html5lib>=1.1,<2.0",
    "markdown>=3.4.0,<4.0",
    "matplotlib>=3.7.0,<4.0",
    "numpy>=1.21.0,<2.0",
    "openpyxl>=3.0.6,<4.0",
    "pandas>=1.3.0,<3.0",
    "Pillow>=9.0.0,<11.0",
    "pydicom>=2.1.2,<4.0",
    "pylinac>=3.20,<4.0",
    "pynliner>=0.8.0,<1.0",
    "python-dateutil>=2.8.1,<3.0",
    "reportlab>=4.0.0,<5.0",
    "requests>=2.25.0,<3.0",
    "scipy>=1.7.0,<2.0",
    "setuptools>=65.0",
    "urllib3>=1.25.11,<3.0",
    "weasyprint>=65.0,<66.0",
    "xlrd>=2.0.1,<3.0",
    "XlsxWriter>=1.3.7,<4.0",
    "django-recurrence>=1.11.0",
    "django-sql-explorer>=5.3",
]

[project.optional-dependencies]
mysql = [
    "mysqlclient==2.0.3",
]

postgres = [
    "psycopg2-binary==2.8.6",
]

win = [
    "CherryPy==18.0.1",
    "pyreadline",
    "pywin32>=300",
    "mssql-django>=1.5",
    "python-ldap",
    "django-auth-ldap<4.9",
]

docker = [
    "gunicorn==19.9.0",
]

[project.urls]
Homepage = "https://qatrackplus.com"
Documentation = "https://docs.qatrackplus.com"
Repository = "https://github.com/qatrackplus/qatrackplus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["qatrack"]

[tool.pytest.ini_options]
testpaths = ["qatrack"]
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    ".venv",
    "venv"
]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
django_find_project = true
DJANGO_SETTINGS_MODULE = "qatrack.settings"

[tool.uv.sources]
python-ldap = { url = "https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.4-1/python_ldap-3.4.4-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "black==23.1.0",
    "pep8>=1.7.1,<2.0",
    "isort",
    "flake8",
    "pylint>=2.12,<3.0",
    "yapf",
    
    # Testing framework and utilities
    "pytest>=7.0,<8.0",
    "pytest-django>=4.5.0,<5.0",
    "pytest-cov>=4.0,<5.0",
    "pytest-sugar>=0.9.6,<1.0",
    "coverage>=6.0,<8.0",
    "django-coverage>=1.2.4,<2.0",
    "freezegun>=1.0.0,<3.0",
    "selenium>=4.0.0,<5.0",
    "PyVirtualDisplay==2.0",
    "django-debug-toolbar>=4.0,<5.0",
    "django-extensions>=3.1.0,<4.0",
    "django-upgrade>=1.25.0",
    "pre-commit>=4.2.0",
    "fabric>=2.6.0",
    "ipdb",
    "ipython",
    
    # Documentation
    "Jinja2==3.1.2",
    "Sphinx==7.4.7",
    "sphinx-autobuild==0.7.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-websupport==1.2.4",
]
